--- a/localisation/AWA_l_english.yml
+++ b/localisation/AWA_l_english.yml
@@ -36,3 +36,4 @@
  AWA_air_close_air_support_2:0 "Amonga Arepata"
  AWA_navy_screen_2:0 "Ahera Taimona"
  AWA_navy_anti_submarine_1:0 "Ahia Rehipeti"
+ AWA_pomare_hehekia:0 "Una'ava Isimali"
