tiny additions to HOU focus tree, can't get all to work

--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -379,8 +379,8 @@
  DES_fascism_DEF:0 "Deseret"
  DES_democratic:0 "Deseret"
  DES_democratic_DEF:0 "the Republic of Deseret"
- DES_neutrality:0 "theodemocratic Deseret"
- DES_neutrality_DEF:0 "theodemocratic Deseret"
+ DES_neutrality:0 "Theodemocratic Deseret"
+ DES_neutrality_DEF:0 "Theodemocratic Deseret"
  DES_communism:0 "Western Socialist Republic"
  DES_communism_DEF:0 "the Western Socialist Republic"
  DES_fascism_ADJ:0 "Deseretan"
@@ -641,16 +641,16 @@
  SCH_communism_ADJ:0 "Schönlander"
  FMU_fascism:0 "Freistaat Deutsch-Mu"
  FMU_fascism_DEF:0 "Freistaat Deutsch-Mu"
- FMU_democratic:0 "Freie Staaten von Mu"
- FMU_democratic_DEF:0 "the Freie Staaten von Mu"
+ FMU_democratic:0 "Freistaaten von Mu"
+ FMU_democratic_DEF:0 "the Freistaaten von Mu"
  FMU_neutrality:0 "Freistaaten Mu"
- FMU_neutrality_DEF:0 "the Freistaaten Mu"
+ FMU_neutrality_DEF:0 "the Freistaaten von Mu"
  FMU_communism:0 "Socialist Republic of Deutsch-Mu"
  FMU_communism_DEF:0 "the Socialist Republic of Deutsch-Mu"
  FMU_fascism_ADJ:0 "Deutsch-Muer"
  FMU_democratic_ADJ:0 "Freistaater"
  FMU_neutrality_ADJ:0 "Freistaater"
- FMU_communism_ADJ:0 "Mu-Deutsche"
+ FMU_communism_ADJ:0 "Mues Deutsche"
  MNU_fascism:0 "Neu-Sachsen"
  MNU_fascism_DEF:0 "Neu-Sachsen"
  MNU_democratic:0 "Manu Autonomous State"
