--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -476,6 +476,9 @@
  ATL_police_k_963:0 "Regain Territory from the Kaprastiak"
  ATL_police_k_964:0 "Regain Territory from the Kaprastiak"
  ATL_police_k_965:0 "Regain Territory from the Kaprastiak"
+ ATL_police_k_1079:0 "Regain Territory from the Kaprastiak"
+ ATL_police_k_1080:0 "Regain Territory from the Kaprastiak"
+ ATL_police_k_1081:0 "Regain Territory from the Kaprastiak"
  ATL_police_i_944:0 "Regain Territory from the Itorkanak"
  ATL_police_i_945:0 "Regain Territory from the Itorkanak"
  ATL_police_i_946:0 "Regain Territory from the Itorkanak"
@@ -485,10 +488,13 @@
  ATL_police_i_963:0 "Regain Territory from the Itorkanak"
  ATL_police_i_964:0 "Regain Territory from the Itorkanak"
  ATL_police_i_965:0 "Regain Territory from the Itorkanak"
+ ATL_police_i_1079:0 "Regain Territory from the Kaprastiak"
+ ATL_police_i_1080:0 "Regain Territory from the Kaprastiak"
+ ATL_police_i_1081:0 "Regain Territory from the Kaprastiak"
  
- ATL_spy_defense:0 ""
- ATL_spy_partisan:0 ""
- ATL_spy_interrogation:0 ""
+ ATL_spy_defense:0 "Network of Informants"
+ ATL_spy_partisan:0 "Undercover Agents"
+ ATL_spy_interrogation:0 "Interrogation Centers"
  ATL_fortify:0 "Strengthen the Police Apparatus"
  ATL_factory_curfews_toggle:0 "Toggle Curfews on Factories"
  ATL_dockyard_curfews_toggle:0 "Toggle Curfews on Dockyards"
