Real gangstas almost done

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -420,6 +420,8 @@
  ATL_kapra_small_cities_3:0 "Kaprastiak Controls 3 Small Cities"
  ATL_kapra_small_cities_4:0 "Kaprastiak Controls 4 Small Cities"
  ATL_kapra_small_cities_5:0 "Kaprastiak Controls 5 Small Cities"
+ ATL_kapra_small_cities_6:0 "Kaprastiak Controls 6 Small Cities"
+ ATL_kapra_small_cities_7:0 "Kaprastiak Controls 7 Small Cities"
  
  ATL_kapra_944_attack:0 "Defend Burmiunean from the Kaprastiak"
  ATL_kapra_945_attack:0 "Defend Zuhaitz from the Kaprastiak"
@@ -430,6 +432,9 @@
  ATL_kapra_963_attack:0 "Defend Taidorie from the Kaprastiak"
  ATL_kapra_964_attack:0 "Defend Chuzaseit from the Kaprastiak"
  ATL_kapra_965_attack:0 "Defend Tashrets from the Kaprastiak"
+ ATL_kapra_1079_attack:0 "Defend Inaxe from the Kaprastiak"
+ ATL_kapra_1080_attack:0 "Defend Navmaur from the Kaprastiak"
+ ATL_kapra_1081_attack:0 "Defend Laytadale from the Kaprastiak"
   
   
  ATL_cooldown_itork:0 "Itorkanak Militias Reorganizing"
@@ -455,6 +460,8 @@
  ATL_itork_small_cities_3:0 "Itorkanak Controls 3 Small Cities"
  ATL_itork_small_cities_4:0 "Itorkanak Controls 4 Small Cities"
  ATL_itork_small_cities_5:0 "Itorkanak Controls 5 Small Cities"
+ ATL_itork_small_cities_6:0 "Itorkanak Controls 6 Small Cities"
+ ATL_itork_small_cities_7:0 "Itorkanak Controls 7 Small Cities"
  
  ATL_itork_944_attack:0 "Defend Burmiunean from the Itorkanak"
  ATL_itork_945_attack:0 "Defend Zuhaitz from the Itorkanak"
@@ -465,6 +472,9 @@
  ATL_itork_963_attack:0 "Defend Taidorie from the Itorkanak"
  ATL_itork_964_attack:0 "Defend Chuzaseit from the Itorkanak"
  ATL_itork_965_attack:0 "Defend Tashrets from the Itorkanak"
+ ATL_itork_1079_attack:0 "Defend Inaxe from the Itorkanak"
+ ATL_itork_1080_attack:0 "Defend Navmaur from the Itorkanak"
+ ATL_itork_1081_attack:0 "Defend Laytadale from the Itorkanak"
  
  
  ATL_police_k_944:0 "Regain Territory from the Kaprastiak"
@@ -503,3 +513,13 @@
  ATL_democratic_politician:0 "Debnilat Ħastimalak"
  ATL_fascist_demagogue:0 "Arvisip Nażemut"
  ATL_communist_revolutionary:0 "Ŧerxu Ežnat"
+ 
+ 
+ ATL_kaprastiak_war_category:0 "War on the Kaprastiak"
+ ATL_itorkanak_war_category:0 "War on the Itorkanak"
+ 
+ 
+ 
+ 
+ 
+ 
