Another patch to kill Kiran's game

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -442,6 +442,17 @@
  ATL_itork_up_tt:0 "Increases the Itorkanak control on the state"
  ATL_itork_down_tt:0 "Decreases the Itorkanak control on the state"
  
+ spy_defense_tooltip:0 "Increases the reorganization time for the criminals"
+ spy_partisan_tooltip:0 "Reduces the political power costs for police actions"
+ spy_interrogation_tooltip:0 "Reduces the political power costs for police actions"
+ fortify_tooltip:0 "Reduces the chances of success for the criminals"
+ factory_curfews_off_tooltip:0 "Removes the factory curfew modifiers"
+ factory_curfews_on_tooltip:0 "Greatly reduces the success chances for the Kaprastiak"
+ dockyard_curfews_off_tooltip:0 "Removes the dockyard curfew modifiers"
+ dockyard_curfews_on_tooltip:0 "Greatly reduces the success chances for the Itorkanak"
+ training_tooltip:0 "Reduces police casualties and improve success chances"
+ equip_tooltip:0 "Reduces police casualties when defending"
+ 
  ATL_itork_4_1:0 "Itorkanak Sympathies in Zuhaitz"
  ATL_itork_4_2:0 "Itorkanak Cells in Zuhaitz"
  ATL_itork_4_3:0 "Itorkanak Areas in Zuhaitz"
