--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -44,8 +44,26 @@
  PRJ_navy_carrier_2:0 "Michael Bardanes"
 
 
- PRJ_roderiq_bcomes_a_leader:0 "King Roderiq becomes a Field Marshal"
+ PRJ_roderiq_bcomes_a_leader:0 "§tKing Roderiq becomes a Field Marshal§"
+#ideas
+PRJ_spy_defense:0 "Royal Eye"
+PRJ_spy_defense_desc:0 "Getting close is difficult and any foriegn influnce culled before it gets to close to the king"
 
+PRJ_lagging_army:0 "Lagging Army"
+PRJ_lagging_army_desc:0 "Even with all the modern equiptment from trucks to tanks, our army is still abit cautious to use them to its full potential."
+
+PRJ_mobilization:0 "Prepare Reinforcements"
+PRJ_mobilization_desc:0 "Conscription is the key to any large scale conflict, we must be ready with ever willing recruits"
+
+PRJ_free_african_nations:0 "African Freedom"
+PRJ_free_african_nations_Desc:0 "Africa is home to many people, we trust that they are capible to rule themselves."
+
+PRJ_ETH_war_command:0 "Hectic War Command"
+PRJ_ETH_war_command_desc:0 "To little time for proper adjucation, we attack when they decide and defend what they cant."
+PRJ_core_priority:0 "The Heartland"
+PRJ_core_priority_desc:0 "We focus on whats best for the core."
+PRJ_outer_priority:0 "The Hinterland:
+PRJ_outer_priority_desc:0 "We must protect the hinterland so they can trust us to defend them"
 #foci
  PRJ_save_ethiopia:0 "Intervene in Ethiopia"
  PRJ_save_ethiopia_desc:0 "The imperialist forces of a fallen Rome march on one of the last free african nations. Lord Narqana suggests we intervene immediatly to save our neighbors."
@@ -216,3 +234,22 @@
  PRJ_military_projects_2_desc:0 "The world is a dangerous place, and without weapons Yohannia will not survive."
  PRJ_military_projects_3:0 "Military Projects III" 
  PRJ_military_projects_3_desc:0 "The arms industry is not only necessary, it is profitable. Our people will benefit from arms manufacturing now and in the future."
+ 
+ PRJ_modernization:0 "Breakneck Modernization"
+ PRJ_modernization_desc:0 "While we have Motorized trucks its clear we are going to need to make more modern fighting vehicles"
+ 
+ PRJ_blitzkrieg:0 "Hit hard, hit Fast "
+ PRJ_blitzkrieg_desc:0 " If we are to take on the colonialist powers, we must be fast enough to disorient our opponents"
+ 
+ PRJ_light_med_tanks:0 "The Axiqan"
+ PRJ_light_med_tanks_desc:0 "Axiqan's will be the beating heart of an army, making decive breakthroughs by the British in the Great War, we must continue to advance the designs created by them in 1917." 
+ 
+ PRJ_mechanization:0 "Mud Trucks"
+ PRJ_mechanization_desc:0 "The battles we face happen on eneven terrain. by making mechanized trucks we can go through the most hardy of terain, esoecially in the former provinces of Azania."
+ 
+ PRJ_support:0 "Support Gear"
+ PRJ_support_desc:0 "something about not breaking your arm and calling for artillery strikes"
+ 
+ 
+ PRJ_grand_plan:0 "Grand Planning"
+ PRJ_grand_plan_desc:0 "Lord *name*  believes we need much greater planning when dealing with europeans"
