--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -62,7 +62,7 @@ PRJ_ETH_war_command:0 "Hectic War Command"
 PRJ_ETH_war_command_desc:0 "To little time for proper adjucation, we attack when they decide and defend what they cant."
 PRJ_core_priority:0 "The Heartland"
 PRJ_core_priority_desc:0 "We focus on whats best for the core."
-PRJ_outer_priority:0 "The Hinterland:
+PRJ_outer_priority:0 "The Hinterland"
 PRJ_outer_priority_desc:0 "We must protect the hinterland so they can trust us to defend them"
 #foci
  PRJ_save_ethiopia:0 "Intervene in Ethiopia"
