Basically the ganggsta wars minigame

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -389,9 +389,6 @@
  
  
  ###Atlantis Gangsta
- atlantis_gangster.1.t:0 ""
- atlantis_gangster.1.d:0 ""
- atlantis_gangster.1.a:0 ""
  
  ATL_police_acting:0 "Police Currently Acting"
  ATL_factory_curfew_idea:0 "Curfews in Industrial Areas"
@@ -529,8 +526,16 @@
  ATL_kaprastiak_war_category:0 "War on the Kaprastiak"
  ATL_itorkanak_war_category:0 "War on the Itorkanak"
  
+ ATL_police_search_cyclic:0 "Incursion in Progress"
+ ATL_police_search_cooldown:0 "Police Operation in Preparation"
  
+ atlantis_gangster.1.t:0 "Kaprastiak leader captured"
+ atlantis_gangster.1.d:0 "Dude was captured lol"
+ atlantis_gangster.1.a:0 "FUCK YEA"
  
+ atlantis_gangster.2.t:0 "Itorkanak leader captured"
+ atlantis_gangster.2.d:0 "REKT"
+ atlantis_gangster.2.a:0 "xdddddd"
  
  
  
