--- a/localisation/TRS_l_english.yml
+++ b/localisation/TRS_l_english.yml
@@ -185,8 +185,8 @@
  TRS_third_naval_modernization_desc:1 "Our Navy has been upgraded from time to time, however the last major upgrade was over 20 years ago. We must embark on a program to improve our numbers and quality immediately."
  TRS_capital_ship_doctrine:1 "Capital Ship Doctrine"
  TRS_capital_ship_doctrine_desc:1 "Capital ships, with their superior armor and firepower, will be the backbone of our naval forces."
- TRS_increase_hull_size:1 "Increase Hull Size"
- TRS_increase_hull_size_desc:1 "If big is better, then huge is the best! By increasing hull size we can float more guns into battle!"
+ TRS_increase_hull_size:1 "Standardized Repairs"
+ TRS_increase_hull_size_desc:1 "New Desc"
  TRS_air_integration:1 "Air Integration"
  TRS_air_integration_desc:1 "By utilizing air power in combination with naval power we can extend our control of the seas many-fold."
  TRS_national_naval_arsenal:1 "National Naval Arsenal"
