--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -58,8 +58,8 @@ PRJ_mobilization_desc:0 "Conscription is the key to any large scale conflict, we
 PRJ_free_african_nations:0 "African Freedom"
 PRJ_free_african_nations_Desc:0 "Africa is home to many people, we trust that they are capible to rule themselves."
 
-PRJ_ETH_war_command:0 "Hectic War Command"
-PRJ_ETH_war_command_desc:0 "To little time for proper adjucation, we attack when they decide and defend what they cant."
+PRJ_ETH_war_command:0 "War Command"
+PRJ_ETH_war_command_desc:0 "With the war in Ethiopia at a close. We now have a much better command structure than at the start."
 PRJ_core_priority:0 "The Heartland"
 PRJ_core_priority_desc:0 "We focus on whats best for the core."
 PRJ_outer_priority:0 "The Hinterland"
