--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -363,3 +363,43 @@
  FMU_connected_citizen:0 "Waldemar Klossner"
  FMU_liberal_journalist:0 "Gevehard Sommer"
  FMU_head_of_intelligence:0 "Raban Weber"
+ FMU_unfair_sufferage:1 "Unfair Sufferage"
+ FMU_associate_state:1 "Associate State"
+ FMU_fascist_sympathizers:1 "Fascist Sympathizers"
+ FMU_sanctions:1 "Sanctions"
+ FMU_sanctions_modified:1 "Modified Sanctions"
+ FMU_companies:1 "National Companies"
+ FMU_companies_open_stocks:1 "Open Stocks"
+ FMU_companies_open_stocks_civilian:1 "Civilian Stocks"
+ FMU_companies_open_stocks_military:1 "Military Stocks"
+ FMU_companies_kohn:1 "Kohn"
+ FMU_companies_kohn_military:1 "Kohn"
+ FMU_companies_kohn_civilian:1 "Kohn"
+ FMU_status_quo:1 "Status Quo"
+ FMU_maywerken:1 "Maywerken"
+ FMU_aggressive_strikes1:1 "name"
+ name:1 "Aggressive Strikes"
+ FMU_germans_are_super_bros1:1 "Germanic Brotherhood"
+ FMU_germans_are_super_bros2:1 "Germanic Brotherhood"
+ FMU_germans_are_super_bros3:1 "Germanic Brotherhood"
+ FMU_colonial_companies_subsidies:1 "Colonial Company Subsidies"
+ FMU_colonial_companies_subsidies2:1 "Colonial Company Subsidies"
+ FMU_plantations_nationalized:1 "Nationalized Plantations"
+ FMU_dutch_immigration:1 "Dutch Immigration"
+ FMU_centralization:1 "Centralization Focus"
+ FMU_federalism:1 "Federalism Focus"
+ FMU_denazification:1 "De-Nazification"
+ FMU_austral_dominance:1 "Austral Dominance"
+ FMU_we_are_german:1 "Wir Sind Deutch"
+ FMU_no_dutch:1 "No Dutch Language"
+ FMU_boat_production:1 "Increased Ship Production"
+ FMU_boat_bounty:1 "Ship Bounty"
+ FMU_hurty_boats:1 "Improved Naval Efficiency"
+ FMU_pacific_boats:1 "Pacific Focus"
+ FMU_South_A_boats:1 "Cape of Storms Focus"
+ FMU_the_long_lance:1 "Die Ritterlanze"
+ FMU_build_forts:1 "Fortification Construction"
+ FMU_austral_cordination:1 "Austral Coordination"
+ FMU_army_production:1 "Army Focus"
+ FMU_white_immigration_laws:1 "White Immigration Laws"
+ FMU_ache_of_war:1 "The Ache of War"
