--- a/localisation/HOU_l_english.yml
+++ b/localisation/HOU_l_english.yml
@@ -353,3 +353,30 @@
  HOU_offensive_designs_desc:0 "Place flavor text here"
  HOU_defensive_designs:0 "Defensive Designs"
  HOU_defensive_designs_desc:0 "Place flavor text here" 
+ 
+ HOU_pure_marxism_idea:1 "Pure Marxism"
+ HOU_establish_kafakafas_idea:1 "Kafakafas"
+ HOU_stalinism_idea:1 "Stalinism"
+ HOU_bastion_of_the_revolution_idea:1 "Bastion of the Revolution"
+ HOU_kanagan_communism_idea:1 "Kanagan Communism"
+ HOU_communist_research_idea:1 "Communist Research"
+ HOU_racial_superiority_idea:1 "Kanagan Racial Superiority"
+ HOU_new_houpoean_man_idea:1 "The New Houpo'ean Man"
+ HOU_infrastructure_plan_idea:1 "Infrastructure Plan"
+ HOU_trade_idea:1 "Trade Focus"
+ HOU_working_public_idea:1 "A Working Public"
+ HOU_expand_armed_forces_idea:1 "Expanded Armed Forces"
+ HOU_blessed_isolation:1 "Blessed Isolation"
+ HOU_defensive_offense_idea:1 "Defensive Offense"
+ HOU_look_to_your_brother_idea:1 "Look to Your Brother"
+ HOU_great_science_academy:1 "Great Science Academy"
+ HOU_purchase_designs:1 "Purchasing Designs"
+ HOU_full_investigation_idea:1 "A Full Investigation"
+ HOU_national_improvement_idea:1 "National Improvement"
+ HOU_northwestern_enemies_ideas:1 "Our Northwestern Enemies"
+ HOU_pyrrhic_fighting_idea:1 "Pyrrhic Fighting"
+ HOU_bitter_end_idea:1 "To the Bitter End"
+ HOU_capitulation_threashold_left_1_idea:1 "Aggressive Resistance"
+ HOU_capitulation_threashold_left_2_idea:1 "Increased Aggressive Resistance"
+ HOU_capitulation_threashold_right_1_idea:1 "Capitulation Resistance"
+ HOU_capitulation_threashold_right_2_idea:1 "Increased Capitulation Resistance"
