--- a/localisation/TRS_l_english.yml
+++ b/localisation/TRS_l_english.yml
@@ -242,3 +242,22 @@
  TRS_navy_capital_ship_3:1 "Yutsaam Ge Bwatsai"
  TRS_air_naval_strike_1:1 "Jisang Se Kwaraa"
  TRS_navy_carrier_2:1 "Ungtse Qitsa Norongsa"
+ TRS_nat_youth_programs_idea:1 "National Youth Program"
+ TRS_every_woman_a_goddess_idea:1 "Every Woman A Goddess"
+ TRS_downsize_army_idea:1 "Downsizing the Army"
+ TRS_downsize_navy_idea:1 "Donwsizing the Navy"
+ TRS_increase_conscription_idea:1 "Boosted Conscription"
+ TRS_expand_navy_idea:1 "Expanded Navy"
+ TRS_declare_all_debts_waived_idea:1 "All Debts Declared Waived"
+ TRS_youthful_education_idea:1 "Youthful Education"
+ TRS_factory_conversions_idea:1 "Streamlined Factory Conversions"
+ TRS_martial_training_idea:1 "Martial Training"
+ TRS_kawasaki_idea:1 "Kawasaki"
+ TRS_bolster_aircraft_production_idea:1 "Bolster Aircraft Production"
+ TRS_tokyo_weyluchanao_cable_idea:1 "Tokyo-Weyluchanao Undersea Cable"
+ TRS_mitsubishi_idea:1 "Mitsubishi"
+ TRS_kiue_paa_tsear_idea:1 "Kiue Paa Tsear"
+ TRS_special_forces_training_idea:1 "Special Forces Training"
+ TRS_third_naval_modernization_idea:1 "Third Naval Modernization"
+ TRS_increase_hull_size_idea:1 "Hull Size Increase"
+ TRS_national_naval_arsenal_idea:1 "National Naval Arsenal"
