Bookmark desc and ideas updated

--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -45,26 +45,26 @@
 
 
  PRJ_roderiq_bcomes_a_leader:0 "§tKing Roderiq becomes a Field Marshal§"
-#ideas
-PRJ_spy_defense:0 "Royal Eye"
-PRJ_spy_defense_desc:0 "Getting close is difficult and any foriegn influnce culled before it gets to close to the king"
+ #ideas
+ PRJ_spy_defense:0 "Royal Eye"
+ PRJ_spy_defense_desc:0 "Getting close is difficult and any foreign influnce is normally culled before it gets to close to the king. But he will also defend his nation personally."
 
-PRJ_lagging_army:0 "Lagging Army"
-PRJ_lagging_army_desc:0 "Even with all the modern equiptment from trucks to tanks, our army is still abit cautious to use them to its full potential."
+ PRJ_lagging_army:0 "Lagging Army"
+ PRJ_lagging_army_desc:0 "Even with all the modern equiptment from trucks to tanks our army is still a bit cautious to use them to their full potential."
 
-PRJ_mobilization:0 "Prepare Reinforcements"
-PRJ_mobilization_desc:0 "Conscription is the key to any large scale conflict, we must be ready with ever willing recruits"
+ PRJ_mobilization:0 "Prepare Reinforcements"
+ PRJ_mobilization_desc:0 "Conscription is the key to any large scale conflict; we must be ready with ever-willing recruits."
 
-PRJ_free_african_nations:0 "African Freedom"
-PRJ_free_african_nations_Desc:0 "Africa is home to many people, we trust that they are capible to rule themselves."
+ PRJ_free_african_nations:0 "African Freedom"
+ PRJ_free_african_nations_Desc:0 "Africa is home to many people. We trust that they are capable to rule themselves."
 
-PRJ_ETH_war_command:0 "War Command"
-PRJ_ETH_war_command_desc:0 "With the war in Ethiopia at a close. We now have a much better command structure than at the start."
-PRJ_core_priority:0 "The Heartland"
-PRJ_core_priority_desc:0 "We focus on whats best for the core."
-PRJ_outer_priority:0 "The Hinterland"
-PRJ_outer_priority_desc:0 "We must protect the hinterland so they can trust us to defend them"
-#foci
+ PRJ_ETH_war_command:0 "War Command"
+ PRJ_ETH_war_command_desc:0 "With the war in Ethiopia at a close. We now have a much better command structure than at the start."
+ PRJ_core_priority:0 "The Heartland"
+ PRJ_core_priority_desc:0 "We focus on whats best for the core."
+ PRJ_outer_priority:0 "The Hinterland"
+ PRJ_outer_priority_desc:0 "We must protect the hinterland so they can trust us to defend them"
+ #foci
  PRJ_save_ethiopia:0 "Intervene in Ethiopia"
  PRJ_save_ethiopia_desc:0 "The imperialist forces of a fallen Rome march on one of the last free african nations. Lord Narqana suggests we intervene immediatly to save our neighbors."
  PRJ_abandon_ethiopia:0 "Leave Ethiopia to Her Fate"
