Friestater Proto fixes

--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
+ jet_fighter1:0 "Jet Fighter"
+ jet_strategic_bomber1:0 "Jet Bomber"
+ cat_scout_plane:0 "Scout Planes"
  FMU_infantry_equipment_0:0 "Gewehr 98"
  FMU_infantry_equipment_0_short:0 "Gewehr 98"
  FMU_infantry_equipment_0_desc:0 "The Gewehr 98 was a German rifle that saw extensive use during the Great War. It was also produced in the Freiestatten von Mu under license."
