--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -234,22 +234,38 @@
  PRJ_military_projects_2_desc:0 "The world is a dangerous place, and without weapons Yohannia will not survive."
  PRJ_military_projects_3:0 "Military Projects III" 
  PRJ_military_projects_3_desc:0 "The arms industry is not only necessary, it is profitable. Our people will benefit from arms manufacturing now and in the future."
- 
+ #Mil
  PRJ_modernization:0 "Breakneck Modernization"
  PRJ_modernization_desc:0 "While we have Motorized trucks its clear we are going to need to make more modern fighting vehicles"
- 
+ PRJ_land:0 "Retrain the Army"
+ PRJ_land_desc:0 "We must convince our army that the new tech is much better than the old ways"
+ PRJ_sky:0 "Learning to fly"
+ PRJ_sky_desc:0 "The tales of the red baron are not lost on our people, and the desire to reach the heavens beets in our hearts"
+ PRJ_strategic_destruction:0 "Strategic Destruction"
+ PRJ_strategic_destruction_desc:0 "If we can hit enemy facilities then we must."
+ PRJ_heavy_fighter:0 "Heavy Fighters"
+ PRJ_heavy_fighter_desc:0 "We need long range to hit enemy fighters far from our lands""
+ PRJ_tac_bomber:0 "Tactical Bombers"
+ PRJ_tac_bomber_desc:0 "Tactical Strikes against enemy lands are essential to stall their war industry."
+ PRJ_battlefield_support:0 "Close Coridination"
+ PRJ_battlefield_support_desc:0 " If we are t bhe successful, then the army and the airforce must work in tandem for battlefield success."
+ PRJ_light_fighter:0 "Fighters"
+ PRJ_light_fighter_desc:0 "Keeping the skys clear near our forces is vital for success."
+ PRJ_cas_bomber:0 "Close Air Support"
+ PRJ_cas_bomber_desc:0 "Harassing the enemy with side swipes from planes should keep them still for long enough for the main force to finish them off."
  PRJ_blitzkrieg:0 "Hit hard, hit Fast "
  PRJ_blitzkrieg_desc:0 " If we are to take on the colonialist powers, we must be fast enough to disorient our opponents"
- 
  PRJ_light_med_tanks:0 "The Axiqan"
  PRJ_light_med_tanks_desc:0 "Axiqan's will be the beating heart of an army, making decive breakthroughs by the British in the Great War, we must continue to advance the designs created by them in 1917." 
- 
  PRJ_mechanization:0 "Mud Trucks"
  PRJ_mechanization_desc:0 "The battles we face happen on eneven terrain. by making mechanized trucks we can go through the most hardy of terain, esoecially in the former provinces of Azania."
- 
  PRJ_support:0 "Support Gear"
  PRJ_support_desc:0 "something about not breaking your arm and calling for artillery strikes"
- 
- 
  PRJ_grand_plan:0 "Grand Planning"
  PRJ_grand_plan_desc:0 "Lord *name*  believes we need much greater planning when dealing with europeans"
+ PRJ_infantry_gear:0 "Prioritize Rifles"
+ PRJ_infantry_gear_desc:0 "A good weapon in the hand of asoldier can make all the difference in battle." 
+ PRJ_artillery_gear:0 "King of the battlefield"
+ PRJ_artillery_gear_desc:0 "Send them to god with shells from the sky. What he does with their souls afterwards is not our concern."
+ PRJ_train_gear:0 "The power of trains"
+ PRJ_train_gear_desc:0 "Time and time again we have been remined of the power of rails and he revolutionary ways they change war. From the Franco-Prussian War, to the Anglo-Yohannian War, to the Great war. How these several hundred tons of steel revolutionize war again is yet to be seen."
