--- a/localisation/TRS_l_english.yml
+++ b/localisation/TRS_l_english.yml
@@ -259,5 +259,5 @@
  TRS_kiue_paa_tsear_idea:1 "Kiue Paa Tsear"
  TRS_special_forces_training_idea:1 "Special Forces Training"
  TRS_third_naval_modernization_idea:1 "Third Naval Modernization"
- TRS_increase_hull_size_idea:1 "Hull Size Increase"
+ TRS_increase_hull_size_idea:1 "Standardized Repairs"
  TRS_national_naval_arsenal_idea:1 "National Naval Arsenal"
