--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -148,7 +148,7 @@
  PRJ_ETH_military_factory:0 "Addis Ababa Military Arms"
  PRJ_ETH_military_factory_desc:0 "If Ethiopia is to survive another encounter with Europe she must have the armaments to supply herself. By loaning them designs from Malipta Arms and the old factory equipment for our older models they should be able to begin properly supplying themselves."
  PRJ_ETH_steel_factory:0 "Ethiopian Steel"
- PRJ_ETH_steel_factory_desc:0 "The production of steel in Ethiopia is sadly pathetic at best. Several Yohannian investors have already come forth and begun to build several steel mills in our neighboring nation."
+ PRJ_ETH_steel_factory_desc:0 "The production of steel in Ethiopia is pathetic at best. Several Yohannian investors have already come forth and begun to build several steel mills in our neighboring nation."
  PRJ_ETH_alumin_factory:0 "Ethiopian Aluminum"
  PRJ_ETH_alumin_factory_desc:0 "Ethiopia does not produce much aluminum, so we must remedy that if they are to make an airforce." 
  PRJ_ETH_occupy_yemen:0 "Occupy North Yemen"
@@ -236,36 +236,36 @@
  PRJ_military_projects_3_desc:0 "The arms industry is not only necessary, it is profitable. Our people will benefit from arms manufacturing now and in the future."
  #Mil
  PRJ_modernization:0 "Breakneck Modernization"
- PRJ_modernization_desc:0 "While we have Motorized trucks its clear we are going to need to make more modern fighting vehicles"
+ PRJ_modernization_desc:0 "While we have motorized vehicles it's clear we are going to need to make more modern fighting vehicles."
  PRJ_land:0 "Retrain the Army"
- PRJ_land_desc:0 "We must convince our army that the new tech is much better than the old ways"
- PRJ_sky:0 "Learning to fly"
- PRJ_sky_desc:0 "The tales of the red baron are not lost on our people, and the desire to reach the heavens beets in our hearts"
+ PRJ_land_desc:0 "We must convince our army that the new warfighting technologies are an improvement on the old ways."
+ PRJ_sky:0 "Learning to Fly"
+ PRJ_sky_desc:0 "The tales of the Red Baron from the Great War are not lost on our people, and the desire to reach the heavens beats in our hearts."
  PRJ_strategic_destruction:0 "Strategic Destruction"
- PRJ_strategic_destruction_desc:0 "If we can hit enemy facilities then we must."
+ PRJ_strategic_destruction_desc:0 "If we can hit destroy enemy facilities this will cripple their ability to make was on our people."
  PRJ_heavy_fighter:0 "Heavy Fighters"
- PRJ_heavy_fighter_desc:0 "We need long range to hit enemy fighters far from our lands""
+ PRJ_heavy_fighter_desc:0 "By increasing the endurance and strength of our fighters we can plan to keep the war far from our own airspace."
  PRJ_tac_bomber:0 "Tactical Bombers"
- PRJ_tac_bomber_desc:0 "Tactical Strikes against enemy lands are essential to stall their war industry."
- PRJ_battlefield_support:0 "Close Coridination"
- PRJ_battlefield_support_desc:0 " If we are t bhe successful, then the army and the airforce must work in tandem for battlefield success."
+ PRJ_tac_bomber_desc:0 "Tactical strikes against enemy lands are essential to stall their war industry."
+ PRJ_battlefield_support:0 "Close Coordination"
+ PRJ_battlefield_support_desc:0 "If we are to be successful then the army and the airforce must work in tandem for battlefield success."
  PRJ_light_fighter:0 "Fighters"
- PRJ_light_fighter_desc:0 "Keeping the skys clear near our forces is vital for success."
+ PRJ_light_fighter_desc:0 "Keeping the skies clear of enemy airpower near our forces is vital for success."
  PRJ_cas_bomber:0 "Close Air Support"
- PRJ_cas_bomber_desc:0 "Harassing the enemy with side swipes from planes should keep them still for long enough for the main force to finish them off."
- PRJ_blitzkrieg:0 "Hit hard, hit Fast "
- PRJ_blitzkrieg_desc:0 " If we are to take on the colonialist powers, we must be fast enough to disorient our opponents"
+ PRJ_cas_bomber_desc:0 "Harassing the enemy with tactical attacks from aircraft should break the enemy formations enough for the main force to finish them off."
+ PRJ_blitzkrieg:0 "Hit Hard, Hit Fast"
+ PRJ_blitzkrieg_desc:0 "If we are to take on the colonialist powers, we must be fast enough to disorient our opponents."
  PRJ_light_med_tanks:0 "The Axiqan"
- PRJ_light_med_tanks_desc:0 "Axiqan's will be the beating heart of an army, making decive breakthroughs by the British in the Great War, we must continue to advance the designs created by them in 1917." 
+ PRJ_light_med_tanks_desc:0 "Axiqans will be the beating heart of an army, making decisive breakthroughs as the British did in the Great War. We must continue to advance the designs created by them in 1917." 
  PRJ_mechanization:0 "Mud Trucks"
- PRJ_mechanization_desc:0 "The battles we face happen on eneven terrain. by making mechanized trucks we can go through the most hardy of terain, esoecially in the former provinces of Azania."
+ PRJ_mechanization_desc:0 "The battles we face happen on uneven terrain. By making mechanized trucks we can go through the most brutal of terrain, esoecially in the former provinces of Azania."
  PRJ_support:0 "Support Gear"
- PRJ_support_desc:0 "something about not breaking your arm and calling for artillery strikes"
+ PRJ_support_desc:0 "An army marches on its stomach, but it also needs modern support apparati like radios, medical supplies and shovels."
  PRJ_grand_plan:0 "Grand Planning"
- PRJ_grand_plan_desc:0 "Lord *name*  believes we need much greater planning when dealing with europeans"
+ PRJ_grand_plan_desc:0 "Lord Ranil believes we need much greater planning when dealing with Europeans."
  PRJ_infantry_gear:0 "Prioritize Rifles"
- PRJ_infantry_gear_desc:0 "A good weapon in the hand of asoldier can make all the difference in battle." 
- PRJ_artillery_gear:0 "King of the battlefield"
- PRJ_artillery_gear_desc:0 "Send them to god with shells from the sky. What he does with their souls afterwards is not our concern."
- PRJ_train_gear:0 "The power of trains"
- PRJ_train_gear_desc:0 "Time and time again we have been remined of the power of rails and he revolutionary ways they change war. From the Franco-Prussian War, to the Anglo-Yohannian War, to the Great war. How these several hundred tons of steel revolutionize war again is yet to be seen."
+ PRJ_infantry_gear_desc:0 "A good weapon in the hand of a soldier can make all the difference in battle." 
+ PRJ_artillery_gear:0 "King of the Battlefield"
+ PRJ_artillery_gear_desc:0 "Send them to God with shells from the sky. What He does with their souls afterwards is not our concern."
+ PRJ_train_gear:0 "The Power of Trains"
+ PRJ_train_gear_desc:0 "Time and time again we have been remined of the power of rails and the revolutionary ways in which they change war. From the Franco-Prussian War to the Anglo-Yohannian War to the Great War the locomotive has drastically improved the supply lines for modern armies."
