Mex/Rgd focus changes

--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -136,9 +136,9 @@
  PRJ_proper_alliance:0 "A Proper Alliance"
  PRJ_proper_alliance_desc:0 "Our movement to free Africa is in full swing and cannot be stopped now."
  PRJ_control_ethiopia:0 "More than Friends, Brothers"
- PRJ_control_ethiopia_desc:0 "Emperor Selassie recognises that his empire needs more proper guidance in maners of modernization. King Roderiq is very willing to lend a hand with Ethiopia's industrialization."
+ PRJ_control_ethiopia_desc:0 "Emperor Selassie recognises that his empire needs more proper guidance, especially in matters of modernization. King Roderiq is very willing to lend a hand with Ethiopia's industrialization."
  PRJ_prepare_for_more:0 "Prepare For Europe's Return"
- PRJ_prepare_for_more_desc:0 "It is only a matter of time before the Europeans come back to try to beat us into submission. We must prepare our industry for more production to support our nation's defence."
+ PRJ_prepare_for_more_desc:0 "It is only a matter of time before the Europeans come back to try to beat us into submission. We must prepare our industry for more production to support our nation's defense."
  PRJ_ETH_kicking_and_screaming:0 "Ethiopian Industry"
  PRJ_ETH_kicking_and_screaming_desc:0 "Ethiopia was too slow to effectively industrialize themselves. We will forcibly industrialize her for her own benefit."
  PRJ_fund_ETH_docks:0 "Build Ethiopian Naval Yards"
@@ -165,8 +165,8 @@
  PRJ_purchase_kenya_desc:0 "With the war in Europe the British have offered us the opportunity to purchase Kenya and join the Allies."
  PRJ_fufill_promise:0 "Join the Allies"
  PRJ_fufill_promise_desc:0 "It is time we fufill our Faustian bargain with the Europeans. We will join the Allies and utilize our might to crush the fascists."
- PRJ_renegade:0 "Betray the Allies"
- PRJ_renegade_desc:0 "We cannot trust the Allies! We must take what is ours before it is too late!"
+ PRJ_renegade:0 "A Yohannian Path"
+ PRJ_renegade_desc:0 "While our erstwhile cooperation with the Allies has yielded great benefits, the time has come for us to avenge our people's mistreatment at the hands of the Europeans. We will integrate Ethiopia into our empire and liberate as much of Africa from the Europeans as we can."
  #free Africa
  PRJ_free_africa:0 "Freedom for Africa"
  PRJ_free_africa_desc:0 "Africa is a large place we cannot hope to administer it all. New kingdoms must be carved out to help with local administration and protection."
