--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ FMU_neutrality_party_kaiser_long:0 "House Hohenzollern"
+ FMU_neutrality_party_kaiser:0 "House Hohenzollern"
  FMU_broke_versailles:0 "Rejected Treaty of Versailles"
  FMU_we_are_german:0 "Wir sind Deutsche"
  FMU_shared_heritage:0 "Shared Heritage"
@@ -174,7 +176,7 @@
  FMU_ban_democrats:1 "Ban the Democratic Parties"
  FMU_ban_democrats_desc:1 "The time has come! Now that the Communists and the Fascists have been crushed we must continue onward to stability; we must eliminate the poison that is democracy."
  FMU_elect_kaiser:1 "The Election of the Kaiser"
- FMU_elect_kaiser_desc:1 "Now that our nation has adequate laws and guidance, we must elevate one of our noblemen to the position of Kaiser. This will properly define our great nation and give our people the leader they need."
+ FMU_elect_kaiser_desc:1 "Now that our nation has adequate laws and guidance, we must elevate one of our noblemen to the position of Kaiser. The grandson of Frederick III and nephew to Wilhelm II, Wilhelm Viktor Karl August Heinrich Sigismund immigrated to Freistaaten von Mu in 1927. With his impeccable bloodline and his natural grace Sigismund will make a natural Kaiser for our people!"
  FMU_white_immigration:1 "White Immigration Laws"
  FMU_white_immigration_desc:1 "\"Any person of white heritage, of European or purely European derived ancestry, is permitted to apply for immigrant status to our nation. No person of black, mulatto, or other mixed race may be permitted resident status.\" National Immigration Law of 1946, Clause D."
  FMU_encourage_settlement:1 "Encourage Settlement of Non-White Areas"
