National FOci Fixed x3

--- a/localisation/aml_opinion_modifiers_l_english.yml
+++ b/localisation/aml_opinion_modifiers_l_english.yml
@@ -16,7 +16,7 @@
  FMU_charmed:0 "Charm Offensive"
  PRJ_hatred:0 "Yohannian Hatred"
  PRJ_tolerated:0 "Yohannian Tolerance"
- HOU_insult_SOV:0 "Yohannian-Soviet Insults"
+ HOU_insult_SOV:0 "Houpo'ean-Soviet Insults"
  neighbor_malus:0 "Poor Neighbor Relations"
  neighbor_love:0 "Good Neighbor Relations"
  trs_bankrupt_dirtbags_focus:0 "Bankrupt Debtor"
