--- a/localisation/HOU_l_english.yml
+++ b/localisation/HOU_l_english.yml
@@ -380,3 +380,11 @@
  HOU_capitulation_threashold_left_2_idea:1 "Increased Aggressive Resistance"
  HOU_capitulation_threashold_right_1_idea:1 "Capitulation Resistance"
  HOU_capitulation_threashold_right_2_idea:1 "Increased Capitulation Resistance"
+ HOU_invite_trotsky_idea:1 "True Revolutionary"
+ HOU_export_the_revolution_idea:1 "Exported Revolution"
+ HOU_build_on_strength_idea:1 "Improved Special Forces"
+ HOU_coastal_defense_navy_idea:1 "Coastal Defences Navy"
+ HOU_torpedo_boats_idea:1 "Torpedo Boats"
+ HOU_begin_army_reforms_ideas:1 "Improved Training Regiem"
+ HOU_landborne_designs_idea:1 "Attack Plan Oyster"
+ HOU_special_forces_idea:1 "Special Forces"
