--- a/localisation/aml_opinion_modifiers_l_english.yml
+++ b/localisation/aml_opinion_modifiers_l_english.yml
@@ -20,3 +20,4 @@
  neighbor_malus:0 "Poor Neighbor Relations"
  neighbor_love:0 "Good Neighbor Relations"
  trs_bankrupt_dirtbags_focus:0 "Bankrupt Debtor"
+ HOU_commie_friends:0 "Friends of the Revolution"
